--- a/Slides.html
+++ b/Slides.html
@@ -341,9 +341,7 @@ Fernanda Kelly R. Silva | Estatística
 </section>
 <section id="quem-é-a-fê" class="title-slide slide level1 center">
 <h1>Quem é a Fê?</h1>
-<div class="column" style="width:60%;">
 <p>Eu sou uma mulher preta com <strong>coragem</strong> e que fez (e ainda faz) uma boa limonada com os limões que a carreira na área da tecnologia oferece a todas minorias sociais.</p>
-</div>
 </section>
 
 <section>
@@ -351,8 +349,8 @@ Fernanda Kelly R. Silva | Estatística
 <h1>E faz o quê?</h1>
 
 </section>
-<section id="vida-acadêmica" class="slide level2">
-<h2>Vida (??) Acadêmica</h2>
+<section id="carreira-acadêmica" class="slide level2">
+<h2>Carreira Acadêmica</h2>
 <div class="fragment">
 <ul>
 <li>Graduada em Estatística pela Universidade Federal de Goiás (UFG);</li>
@@ -376,12 +374,19 @@ Fernanda Kelly R. Silva | Estatística
 </section></section>
 <section id="e-sabe-o-que-é-o-mais-íncrivel-de-tudo-isso" class="title-slide slide level1 center">
 <h1>E sabe o que é o mais íncrivel de TUDO isso?</h1>
-<div class="fragment">
+
+</section>
+
+<section id="section" class="title-slide slide level1 center" data-background-color="#B048A2">
+<h1></h1>
 <p>É que caminho ao lado de grandes mulheres.</p>
+
+<img data-src="img/turma_RLadiesgyn.jpg" class="r-stretch"><div class="footer">
+<p>Curso Introdução ao RBio e Experimentos ministrado por Dthenifer</p>
 </div>
 </section>
 
-<section id="section" class="title-slide slide level1 center">
+<section id="section-1" class="title-slide slide level1 center">
 <h1></h1>
 <p>Sou fundadora de um capítulo da organização mundial R-Ladies. Este capítulo é o <a href="https://www.rladiesgyn.com/">R-Ladies Goiânia</a> e também faço parte do time global da organização <a href="https://www.ai-inclusive.org/">AI Inclusive</a>.</p>
 </section>
@@ -390,11 +395,6 @@ Fernanda Kelly R. Silva | Estatística
 <h1>E vocês?</h1>
 
 </section>
-
-<section id="e-vocês-1" class="title-slide slide level1 center">
-<h1>E vocês?</h1>
-
-<img data-src="img/belive_allison.png" class="r-stretch"></section>
 
 <section id="vamos-começar" class="title-slide slide level1 center">
 <h1>Vamos começar…</h1>
@@ -439,7 +439,7 @@ Fernanda Kelly R. Silva | Estatística
 </div>
 </section>
 
-<section id="section-1" class="title-slide slide level1 center">
+<section id="section-2" class="title-slide slide level1 center">
 <h1></h1>
 <ul>
 <li>Por padrão, cada projeto recebe 1 GB de RAM e 1 CPU, além de um limite de execução em segundo plano de 1 hora.</li>
@@ -464,7 +464,7 @@ Fernanda Kelly R. Silva | Estatística
 
 </section>
 
-<section id="section-2" class="title-slide slide level1 center">
+<section id="section-3" class="title-slide slide level1 center">
 <h1></h1>
 <ul>
 <li><p>É uma linguagem de programação que possui muitas ferramentas para análise de dados, visualização de dados e tantas outras ferramentas;</p></li>
@@ -475,7 +475,7 @@ Fernanda Kelly R. Silva | Estatística
 </ul>
 </section>
 
-<section id="section-3" class="title-slide slide level1 center">
+<section id="section-4" class="title-slide slide level1 center">
 <h1></h1>
 <ul>
 <li>Os pacotes R contêm <strong>código</strong>, <strong>dados</strong> e <strong>documentação</strong> em um formato de coleção padronizado que pode ser instalado pelos usuários do R, normalmente por meio de um repositório de software centralizado como o <strong>CRAN (Comprehensive R Archive Network)</strong>.</li>
@@ -483,11 +483,9 @@ Fernanda Kelly R. Silva | Estatística
 </ul>
 </section>
 
-<section id="section-4" class="title-slide slide level1 center">
+<section id="section-5" class="title-slide slide level1 center">
 <h1></h1>
-<div class="fragment">
-<p>Mas, por onde começar?</p>
-</div>
+<p>Mas, por onde começar Fê?</p>
 </section>
 
 <section id="o-início-de-tudo" class="title-slide slide level1 center">
@@ -500,21 +498,41 @@ Fernanda Kelly R. Silva | Estatística
 
 </section>
 
-<section id="section-5" class="title-slide slide level1 center">
+<section id="section-6" class="title-slide slide level1 center">
 <h1></h1>
 <p>O ponto é: <strong>vale mais a pena se esforçar para encontrar um par de meias no meio de uma gaveta bagunçada ou vale mais a pena se esforçar para arrumar uma gaveta bagunçada?</strong></p>
 </section>
 
-<section id="step-1" class="title-slide slide level1 center">
+<section id="step-1" class="title-slide slide level1 center" data-background-color="#FDE962">
 <h1>Step 1</h1>
 
 </section>
 
-<section id="section-6" class="title-slide slide level1 center">
+<section id="section-7" class="title-slide slide level1 center">
 <h1></h1>
-<div class="fragment">
 <p>Essa etapa do curso vai ser de muita troca e <strong>live coding</strong>. Vamos aprender as funcionalidades do R juntinhos e operantes, bora?</p>
-</div>
+</section>
+
+<section id="step-2" class="title-slide slide level1 center" data-background-color="#FDE962">
+<h1>Step 2</h1>
+
+</section>
+
+<section>
+<section id="tidyverse" class="title-slide slide level1 center">
+<h1>Tidyverse</h1>
+
+</section>
+<section id="section-8" class="slide level2">
+<h2></h2>
+</section></section>
+<section id="teste-de-hipóteses" class="title-slide slide level1 center">
+<h1>Teste de Hipóteses</h1>
+
+</section>
+
+<section id="k-means" class="title-slide slide level1 center">
+<h1>K-Means</h1>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 <p>Slides por <a href="https://fernandakellyrs.com">Fernanda Kelly</a>. Slides <a href="https://github.com/FernandaKelly/IntroR_CONABIVE">on GitHub</a>.</p>
