--- a/Slides.html
+++ b/Slides.html
@@ -518,12 +518,36 @@ Fernanda Kelly R. Silva | Estatística
 
 </section>
 
-<section>
-<section id="tidyverse" class="title-slide slide level1 center">
-<h1>Tidyverse</h1>
+<section id="section-8" class="title-slide slide level1 center">
+<h1></h1>
 
+<img data-src="img/tidyverse-default.png" class="r-stretch"></section>
+
+<section id="section-9" class="title-slide slide level1 center">
+<h1></h1>
+<p>O universo Tidyverse é basicamente uma coleção de pacotes voltados a ciência de dados.</p>
+<ul>
+<li>Estes pacotes tem filosofia, gramática e estruturas de dados em comum (criadas para um pacote trabalhar em conjunto com o outro além de que quando voce aprende a usar um pacote, aprender a usar os outros pacotes do tidyverse se torna muito mais tranquilo)</li>
+</ul>
 </section>
-<section id="section-8" class="slide level2">
+
+<section id="section-10" class="title-slide slide level1 center">
+<h1></h1>
+<p>Facilita MUITOOO o trabalho da pessoa que trabalha com dados</p>
+</section>
+
+<section>
+<section id="section-11" class="title-slide slide level1 center">
+<h1></h1>
+<ul>
+<li><p>Funções que vamos aprender:</p></li>
+<li><p>rename(); distinct(); select();</p></li>
+<li><p>filter(); mutate(); transmute();</p></li>
+<li><p>arrange(); summarise(); group_by();</p></li>
+<li><p>sample_frac(); sample_n().</p></li>
+</ul>
+</section>
+<section id="section-12" class="slide level2">
 <h2></h2>
 </section></section>
 <section id="teste-de-hipóteses" class="title-slide slide level1 center">
