--- a/Slides.html
+++ b/Slides.html
@@ -518,29 +518,33 @@ Fernanda Kelly R. Silva | Estatística
 
 </section>
 
-<section id="section-8" class="title-slide slide level1 center">
+<section id="section-8" class="title-slide slide level1 center" data-background-image="img/tidyverse-default.png">
 <h1></h1>
 
-<img data-src="img/tidyverse-default.png" class="r-stretch"></section>
+</section>
 
 <section id="section-9" class="title-slide slide level1 center">
 <h1></h1>
-<p>O universo Tidyverse é basicamente uma coleção de pacotes voltados a ciência de dados.</p>
+<p>O universo <strong>Tidyverse</strong> é basicamente uma coleção de pacotes voltados a ciência de dados.</p>
 <ul>
-<li>Estes pacotes tem filosofia, gramática e estruturas de dados em comum (criadas para um pacote trabalhar em conjunto com o outro além de que quando voce aprende a usar um pacote, aprender a usar os outros pacotes do tidyverse se torna muito mais tranquilo)</li>
+<li>Estes pacotes tem filosofia, gramática e estruturas de dados em comum, ou seja, foram criadas para um pacote poder trabalhar em conjunto com o outro.</li>
 </ul>
 </section>
 
-<section id="section-10" class="title-slide slide level1 center">
+<section id="section-10" class="title-slide slide level1 center" data-background-color="black">
 <h1></h1>
-<p>Facilita MUITOOO o trabalho da pessoa que trabalha com dados</p>
-</section>
+<p>Os pacotes que fazem parte desse universo são:</p>
+
+<img data-src="img/tidyverse_pacotes.jpeg" class="r-stretch"></section>
 
 <section>
-<section id="section-11" class="title-slide slide level1 center">
+<section id="section-11" class="title-slide slide level1 center" data-background-image="img/tidyverse_forma.png">
 <h1></h1>
+
+</section>
+<section id="funções-que-vamos-aprender" class="slide level2">
+<h2>Funções que vamos aprender</h2>
 <ul>
-<li><p>Funções que vamos aprender:</p></li>
 <li><p>rename(); distinct(); select();</p></li>
 <li><p>filter(); mutate(); transmute();</p></li>
 <li><p>arrange(); summarise(); group_by();</p></li>
