--- a/Slides.html
+++ b/Slides.html
@@ -1240,15 +1240,27 @@ Fernanda Kelly R. Silva | Estatística
 
 <section id="section-51" class="title-slide slide level1 center">
 <h1></h1>
-<p><u><strong>A parte final de uma análise estatı́stica, o teste de hipotese (T.H.), se dá pela tomada de decisão relativa a um problema de interesse, digamos, verificar se há associação entre um fator (adubo) e o tamanho de uma planta (mangueira) na experimentação agronômica.</strong></u></p>
+<p><strong>A parte final de uma análise estatı́stica, o teste de hipotese (T.H.), se dá pela tomada de decisão relativa a um problema de interesse, digamos, verificar se há associação entre um fator (adubo) e o tamanho de uma planta (mangueira) na experimentação agronômica.</strong></p>
 </section>
 
 <section id="section-52" class="title-slide slide level1 center">
 <h1></h1>
+<p>Na prática experimental é comum o surgimento de situações em que não se tem o conhecimento da distribuição dos dados, ou mesmo que o tenha, os mesmos podem não ter a distribuição normal. A alta dispersão ou até mesmo assimetria, ou ambos, fazem com que o trato com os dados seja dificultado.</p>
+<aside class="notes">
 <ul>
-<li><p>Na prática experimental é comum o surgimento de situações em que não se tem o conhecimento da distribuição dos dados, ou mesmo que o tenha, os mesmos podem não ter a distribuição normal. A alta dispersão ou até mesmo assimetria, ou ambos, fazem com que o trato com os dados seja dificultado.</p></li>
-<li><p><strong>Muitos casos destes existem técnicas de transformações nos dados que produzem novos dados cuja distribuição se aproxime da normal</strong>. Caso isto não seja possı́vel as técnicas não-paramétricas são uma alternativa para análise estatı́stica.</p></li>
+<li><strong>Muitos casos destes existem técnicas de transformações nos dados que produzem novos dados cuja distribuição se aproxime da normal</strong>. Caso isto não seja possı́vel as técnicas não-paramétricas são uma alternativa para análise estatı́stica.</li>
 </ul>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 
 <section id="section-53" class="title-slide slide level1 center">
